    9. Control characters and spaces created by breaking HTML in the middle are now trimmed from link parameters.
   10. Forms with query strings included in the action attribute now are submitted with that string intact.
   11. (bug #490821) Javadoc generation no longer gives errors
   12. (bug #524627) Null pointer exception in NodeUtils.convertNBSP

Additions:
  Content and parsing enhancements:
      1. Disabled submit buttons are now detected, but requests cannot be made from them unless parameter validation is off.
      2. HttpUnit now handles multiple file form controls with the same name.
      3. WebResponse now has a getSubframeContents method which returns the contents of a subframe of the frame represented
         by the response.

  ServletUnit enhancements
      4. ServletUnit now supports creating a RequestDispatcher from ServletContext to forward to other servlets.
         Support for this is rudimentary at present: query parameters on the request dispatcher create are ignored.
      5. ServletUnit now supports the web.xml <context-param> tag.
      6. ServletUnit now supports the HttpServletRequest.getRequestURI method
      7. ServletUnit now supports defining (and retrieving) a non-empty context path for a web application
      8. ServletUnit now supports wild-cards in web.xml servlet mapping

  Form manipulation enhancements:
      9. It is now possible to set values for a form directly into the WebForm object. All such changes will be validated.
         These will be used by any requests derived from the form.
     10. Parameters defined in form query strings are now included in the known parameters of a form and requests
         built from it.
     11. Form parameters can be reset to their initial values using WebForm.reset().
     12. You can now change the position of an image button click in a request with WebRequest.setImageButtonClickPosition()

  Test properties enhancements: